--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "api:start": "node api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nuno Nogueira",
@@ -13,6 +14,8 @@
     "hapi": "^16.1.1",
     "joi": "^10.5.0",
     "knex": "^0.13.0",
-    "pg": "^6.2.3"
+    "pg": "^6.2.3",
+    "truffle-contract": "^2.0.0",
+    "web3": "^0.19.0"
   }
 }
