--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Nuno Nogueira",
   "license": "MIT",
   "dependencies": {
+    "bignumber.js": "^4.0.2",
+    "bunyan": "^1.8.10",
     "glue": "^4.1.0",
     "hapi": "^16.1.1",
     "joi": "^10.5.0",
     "knex": "^0.13.0",
     "pg": "^6.2.3",
+    "truffle-artifactor": "^2.1.4",
     "truffle-contract": "^2.0.0",
     "web3": "^0.19.0"
   }
