--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "glue": "^4.1.0",
     "hapi": "^16.1.1",
     "joi": "^10.5.0",
-    "knex": "^0.13.0",
-    "pg": "^6.2.3",
+    "pg": "^6.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.2.0",
     "truffle-artifactor": "^2.1.4",
     "truffle-contract": "^2.0.0",
     "web3": "^0.19.0"
